# bonlang

./: LICENSE  README.md  TODO.md  bonlang.cabal  stack.yaml
app/: Ast.hs  Main.hs
src/: Bonlang.hs
src/Bonlang/: ErrorMessages.hs  Lang.hs  Lexer.hs  Runtime.hs
src/Bonlang/Lang/: Bool.hs  Numeric.hs  Strings.hs  Types.hs
src/Bonlang/Lexer/: Renamer.hs
src/Bonlang/Runtime/: Bool.hs  IO.hs  Lists.hs  Numeric.hs  Primitives.hs  Strings.hs  Types.hs
test/: Spec.hs
test/examples/: alias_assign.bl  array_def.bl  automatic_curry.bl  car_and_cdr.bl  closure.bl  closures2.bl  closures_advanced.bl  currying.bl  currying2.bl  factorial.bl  fibonacci.bl  flip.bl  function_instructions_def.bl  hello_add.bl  hello_bools.bl  hello_equals.bl  hello_world.bl  hello_world_lazy.bl  lazy_hello2.bl  module_def_mixed.bl  pattern_match.bl  pattern_match_advanced.bl  simple_bools.bl  simple_equals.bl
test/parser_tests/: automatic_curry.bl  car_and_cdr.bl  closure.bl  closures_advanced.bl  currying.bl  currying2.bl  currying_advanced.bl  double_def.bl  factorial.bl  fibonacci.bl  flip.bl  function_pure_def.bl  hello_world.bl  hello_world_lazy.bl  integer_def.bl  module_def_only_instructions.bl  module_def_only_pure.bl  module_with_imports.bl  pattern_match.bl  pattern_match_advanced.bl  simple_add.bl  simple_equals.bl
