name:                bonlang
version:             0.1.0.0
synopsis:            A 'beautiful' (?) language
description:         Please see README.md
homepage:            https://github.com/charlydagos/bonlang
license:             MIT
license-file:        LICENSE
author:              Carlos Andrés D'Agostino
maintainer:          carlos.dagostino@gmail.com
copyright:           2016 Carlos Andrés D'Agostino
category:            Languages
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:         -Wall -Wunused-do-bind -Wincomplete-patterns
  hs-source-dirs:      src
  exposed-modules:     Bonlang
                     , Bonlang.Lang
                     , Bonlang.Lang.Bool
                     , Bonlang.Lang.Numeric
                     , Bonlang.Lang.Strings
                     , Bonlang.Lang.Types
                     , Bonlang.Runtime
                     , Bonlang.Runtime.Bool
                     , Bonlang.Runtime.IO
                     , Bonlang.Runtime.Lists
                     , Bonlang.Runtime.Numeric
                     , Bonlang.Runtime.Primitives
                     , Bonlang.Runtime.Strings
                     , Bonlang.Runtime.Types
                     , Bonlang.Lexer
                     , Bonlang.ErrorMessages
  build-depends:       base >= 4.8 && < 5
                     , parsec
                     , text
                     , bytestring
                     , containers
                     , mtl
                     , transformers
  default-language:    Haskell2010

executable bonlang
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , bonlang
                     , mtl
                     , transformers
                     , text
                     , bytestring
                     , containers
                     , mtl
  default-language:    Haskell2010

test-suite bonlang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bonlang
                     , parsec
                     , directory
                     , filepath
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-smallcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -fprof-auto
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/charlydagos/bonlang
